--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Tino Walks",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon.png",
       "sizes": "528x528 64x64 32x32 24x24 16x16",
       "type": "image/png"
     }
